<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>eu.clarin.cmdi</groupId>
    <artifactId>curation-dashboard</artifactId>
    <name>Curation Dashboard</name>
    <packaging>pom</packaging>
    <version>${revision}</version>
    <organization>
        <name>CLARIN</name>
        <url>https://www.clarin.eu</url>
    </organization>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <linkchecker-persistence.version>2.0.0</linkchecker-persistence.version>
        <revision>7.1.2</revision>
        <vlo.version>4.12.1</vlo.version>
        <vtd.version>2.11</vtd.version>
        <saxon.version>12.3</saxon.version>
        <mockserver.version>5.15.0</mockserver.version>
        <ehcache.version>3.10.8</ehcache.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>javax.cache</groupId>
            <artifactId>cache-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.ehcache</groupId>
            <artifactId>ehcache</artifactId>
            <version>${ehcache.version}</version>
            <classifier>jakarta</classifier>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <!--
            no spring-boot-maven-plugin here, since we don't want to create an executable of any module
            see https://spring.io/guides/gs/multi-module/
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-caches</id>
                        <phase>test</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${java.io.tmpdir}/ehtestcache</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>ehtestcache</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>CLARIN</id>
            <name>CLARIN Repository</name>
            <url>https://nexus.clarin.eu/content/repositories/Clarin/</url>
        </repository>
        <repository>
            <id>CLARIN-Snapshot</id>
            <name>CLARIN Snapshot Repository</name>
            <url>https://nexus.clarin.eu/content/repositories/clarin-snapshot/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <id>sonatype-apache</id>
            <url>https://repository.apache.org/releases</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <modules>
        <module>curation-commons</module>
        <module>curation-ccr</module>
        <module>curation-cr</module>
        <module>curation-api</module>
        <module>curation-app</module>
        <module>curation-web</module>
    </modules>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>eu.clarin</groupId>
                <artifactId>linkchecker-persistence</artifactId>
                <version>${linkchecker-persistence.version}</version>
            </dependency>
            <dependency>
                <groupId>net.sf.saxon</groupId>
                <artifactId>Saxon-HE</artifactId>
                <version>${saxon.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mock-server</groupId>
                <artifactId>mockserver-spring-test-listener</artifactId>
                <version>${mockserver.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
